new fresh design

--- a/content/projects/projects.json
+++ b/content/projects/projects.json
@@ -4,7 +4,7 @@
   "projectList": [{
     "title": "React OpenTok Whiteboard",
     "copy": "React shared whiteboard that works with Opentok",
-    "image": "../images/gallery/ROW.png",
+    "image": "../images/gallery/intersection-observer.jpg",
     "githubLink": "https://github.com/MedElfadhelELHACHEMI/opentok-react-whiteboard"
   },
     {
